fix(docs): rename toggle#switch to toggle#select to avoid reserved keyword
- JavaScript 'switch' is a reserved keyword causing method lookup to fail
- Rename controller method from switch() to select()
- Update code_tabs partial to use click->toggle#select action

--- a/app/views/docs/shared/_code_tabs.html.erb
+++ b/app/views/docs/shared/_code_tabs.html.erb
@@ -11,7 +11,7 @@
       <button
         type="button"
         data-toggle-target="trigger"
-        data-action="click->toggle#switch"
+        data-action="click->toggle#select"
         data-value="<%= lang %>"
         class="code-tab">
         <%= label %>
